# fstapi_base

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  pyproject.toml
.dvc/: config.templ
app/: config.py  main.py
app/api/: application_api.py  conainers.py
app/api/common/: root.py  show_configs.py
app/api/v1/: api.py
app/api/v1/endpoints/: classify.py  hello.py
app/da_log/: logger.py
app/estimators/: classifiers.py  loaders.py
app/preprocesses/: preprocesses.py
app/schemas/: classify.py  hello.py  root.py
app/services/: classify_service.py
app/strategies/: strategies.py
app/utils/: preprocessors.py  types.py
artifacts/models/: .gitignore
configs/: settings.toml
requirements/: requirements-dev.txt  requirements.txt
tests/app_tests/: conftest.py
tests/app_tests/api/: test_classify_routes.py  test_common_routers.py
tests/app_tests/estimators/: test_classifiers.py  test_loaders.py
tests/app_tests/services/: test_services.py
tests/app_tests/strategies/: test_strategies.py
tests/nt/: docker-compose.yaml  load.yaml
tests/resources/: requests_classify_all.csv  requests_classify_critical.csv
