[tool.poetry]
name = "test-llm-service"
version = "0.1.0"
description = "fastapi test project"
authors = [
    "artem.bardakov <artem.bardakov@rtlabs.ru>",
    "denis.pimenov <denis.pimenov@rtlabs.ru>"
]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.9.13"
fastapi = "^0.92.0"
dynaconf = "^3.1.11"
uvicorn = "^0.20.0"
pyaml = "^21.10.1"
dictionary-lib = "~0.1"
dependency-injector = "^4.41.0"
onnxruntime = "^1.17.1"
transformers = "^4.39.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
pylint = "^2.16.2"
coverage = "^7.2.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
isort = "^5.12.0"
bandit = "^1.7.4"
httpx = "^0.23.3"
dvc-s3 = "^2.21.0"

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus3.00.egov.local/repository/da-group/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
    line-length=79

[tool.bandit]
    [tool.bandit.assert_used]
    skips=["*/test_*.py", "*/gunicorn_conf.py"]


[tool.pylint]
    extension-pkg-whitelist = "pydantic"

    [tool.pylint."MESSAGES CONTROL"]
        confidence = ""
        disable = [
            "missing-function-docstring",
            "missing-module-docstring",
            "missing-class-docstring",
            "too-few-public-methods"
        ]